--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,14 @@
 		<dependency>
 			<groupId>juegos.cartas</groupId>
 			<artifactId>juegos-base</artifactId>
-			<version>0.0.1</version>
+			<version>0.2.0-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>juego.cartas</groupId>
+			<artifactId>clasicos</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		
 		</dependency>
 
 		<dependency>
